--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
       - run: |
           julia -e '
             using Pkg
-            Pkg.add("https://github.com/MikeInnes/SourceWalk.jl")
-            Pkg.add("https://github.com/MikeInnes/Vimes.jl")
+            Pkg.add(url = "https://github.com/MikeInnes/SourceWalk.jl")
+            Pkg.add(url = "https://github.com/MikeInnes/Vimes.jl")
             '
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
