--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.0'
           - '1.5'
         os:
           - ubuntu-latest
@@ -32,13 +31,13 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
+      - uses: julia-actions/julia-buildpkg@v1
       - run: |
-          julia -e '
+          julia --project=~/work/GatherShot.jl/GatherShot.jl -e '
             using Pkg
             Pkg.add(url = "https://github.com/MikeInnes/SourceWalk.jl")
             Pkg.add(url = "https://github.com/MikeInnes/Vimes.jl")
             '
-      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
   docs:
     name: Documentation
