trying to convince docs building to use github versions of packages too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,8 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Pkg
+            Pkg.add(url = "https://github.com/MikeInnes/SourceWalk.jl")
+            Pkg.add(url = "https://github.com/MikeInnes/Vimes.jl")
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'
       - run: |
