corrected scoping on calls to other packages and updated docs to be realistic

--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 SourceWalk = "2987fe4f-acca-4bd1-87ee-98b3d562f1a1"
 TestReports = "dcd651b4-b50a-5b6b-8f22-87e9f253a252"
